[#110] refactor(Post): 카테고리 별 게시물 조회 기능 성능 개선